k8s/base/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fact-backend-service
  namespace: fact
spec:
  selector:
    app: fact-backend
  ports:
    - name: http
      port: 5000
      targetPort: 5000
  type: ClusterIP
