k8s/base/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: fact-frontend-service
  namespace: fact
spec:
  selector:
    app: fact-frontend
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  type: ClusterIP
